# photo-keyword-tagger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BLOG.md  README.md  pyproject.toml  test_command_format.py
config/: keywords.txt
docs/: ARCHITECTURE.md  CLI.md  IMPLEMENTATION_SUMMARY.md  PIPELINE.md  RAW_FILE_FINDER.md  XMP_TAGGING.md
examples/: basic_usage.py  cli_usage.sh  complete_workflow.py  find_raw_files.py  pipeline_usage.py  sample_taxonomy.txt
nbs/: build.ipynb
src/photo_keyword_tagger/: __init__.py  cli.py  file_finder.py  hello_world.py  keyword_generator.py  pipeline.py  xmp_tagger.py
tests/: __init__.py  test_file_finder.py  test_hello_world.py  test_keyword_generator.py  test_pipeline.py  test_xmp_tagger.py
