[project]
name = "photo-keyword-tagger"
version = "0.1.0"
description = "A Python package for managing Lightroom catalogues by adding keywords to collections of photos"
readme = "README.md"
authors = [
    { name = "Gurudev Ilangovan", email = "ilangurudev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
